apps/media/ersatztv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: ersatztv
    app.kubernetes.io/name: ersatztv
  name: ersatztv
  namespace: media
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: ersatztv
      app.kubernetes.io/name: ersatztv
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ersatztv
        app.kubernetes.io/name: ersatztv
    spec:
      containers:
        - name: ersatztv
          image: ersatztv
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8409
              name: http
              protocol: TCP

          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          resources:
            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 256Mi

          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /mnt/media
              name: media

      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ersatztv-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: smb-media-claim
