apps/media/ersatztv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersatztv
  namespace: media
  labels:
    kubernetes.io/service-name: ersatztv
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8409
      protocol: TCP
      targetPort: 8409
  type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ersatztv
  namespace: media
  labels:
    kubernetes.io/service-name: ersatztv
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.210
    conditions:
      ready: true
ports:
  - name: http
    port: 8409
    protocol: TCP
